tests/paczka1/fuzzy1/15931093.err
Error in line 1: OatllbM S883 42,7
Error in line 3: OatllbM SAA3 15,4
Error in line 2: OatllbM A451 45,5
Error in line 4: OatllbM S883 33,1
Error in line 10: OatllbM S51 7,2
Error in line 19: OatllbM S883 56,4
